<resources>
    <string name="app_name">FusionsPreview</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_pokemon">First creature</string>
    <string name="second_pokemon">Second creature</string>
    <string name="fuse">Fuse</string>
    <string name="head_pokemon">Head creature</string>
    <string name="body_pokemon">Body creature</string>
    <string name="check">Check</string>
    <string name="custom_sprites_only">Custom sprites only (takes more time to load the sprite)</string>
    <string name="surrender">Surrender</string>
    <string name="current_streak">Current streak:\ </string>
    <string name="_0">0</string>
    <string name="attempts_on_this_one">Attempts on this one:\ </string>
    <string name="choose_a_pokemon">Choose a creature</string>
    <string name="randomize_everything">Randomize everything</string>
    <string name="randomize">Randomize</string>
    <string name="name">Name</string>
    <string name="id">ID:\ </string>
    <string name="type">Types:\ </string>
    <string name="abilities">Abilities:\ </string>
    <string name="settings">Settings</string>
    <string name="head_uppercase">Head</string>
    <string name="non_shiny">Non-shiny</string>
    <string name="body_uppercase">Body</string>
    <string name="statistics">Statistics</string>
    <string name="variants">Variants</string>
    <string name="make_it_shine">Make it shine</string>
    <string name="combine">Combine</string>
    <string name="shiny">Shiny</string>
    <string name="guesser">Guesser</string>
    <string name="shiny_preview">Shiny Preview</string>
    <string name="no_creature_found">No creature found.</string>

    <!-- Themes -->
    <string name="theme_monet">Dynamic</string>
    <string name="theme_greenapple">Green Apple</string>
    <string name="theme_lavender">Lavender</string>
    <string name="theme_midnightdusk">Midnight Dusk</string>
    <string name="theme_strawberrydaiquiri">Strawberry Daiquiri</string>
    <string name="theme_tako">Tako</string>
    <string name="theme_tealturquoise">Teal &amp; Turquoise</string>
    <string name="theme_yinyang">Yin &amp; Yang</string>
    <string name="theme_yotsuba">Yotsuba</string>
    <string name="theme_tidalwave">Tidal Wave</string>
    <string name="label_default">Default</string>
    <string name="hidden_abilities">"Hidden abilities:\ "</string>
    <string name="retry">Retry</string>
    <string name="error_1_message">Couldn\'t get the list of the creatures.\nMake sure you have a working internet connection.</string>
    <string name="face"><![CDATA[(>_<)]]></string>
    <string name="mon_sub_placeholder">...</string>
    <string name="pokedex">Dex</string>
    <string name="do_not_show_anymore">Do not show anymore</string>
    <string name="you_can_only_choose_up_to_two_types">You can only choose up to two types.</string>
    <string name="invalid_creature">Invalid creature</string>
    <string name="incorrect_guess">Incorrect guess</string>
    <string name="correct">Correct</string>
    <string name="you_guessed_correctly_the_creatures_were">"You guessed correctly. The creatures were:\n- Head: "</string>
    <string name="you_lost">You lost</string>
    <string name="types">Types</string>
    <string name="sprites">Sprites</string>
    <string name="weakness">Weakness</string>
    <string name="important_update">Important update</string>
    <string name="we_have_moved_our_app_to_github_releases_would_you_like_to_update_from_there_the_google_play_store_version_of_the_application_will_not_receive_updates">We have moved our app to GitHub releases. Would you like to update from there? The Google Play Store version of the application will NOT receive updates.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="skip_this_version">Skip this version</string>
    <string name="update_available">Update available</string>
    <string name="an_update_is_available_please_consider_updating_the_application_to_access_the_latest_features_and_bug_fixes">An update is available. Please, consider updating the application to access the latest features and bug fixes.</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="no_update_available">No update available</string>
    <string name="great_news_you_re_using_the_latest_version">Great news! You\'re using the latest version.</string>
    <string name="no_sprite_available">No sprite available</string>
    <string name="theme_oceanblue">Ocean Blue</string>
    <string name="search_creature">Search creature</string>
    <string name="sort">Sort</string>
    <string name="sort_dex_order">Dex number</string>
    <string name="sort_by_stats_total">Total</string>
    <string name="sort_by_hp">HP</string>
    <string name="sort_by_attack">Attack</string>
    <string name="sort_by_defense">Defense</string>
    <string name="sort_by_spatk">Special Attack</string>
    <string name="sort_by_spdef">Special Defense</string>
    <string name="sort_by_speed">Speed</string>
    <string name="sort_by">Sort by..</string>
    <string name="sprites_unstable">Sprites (unstable)</string>
    <string name="stats">Stats</string>
    <string name="custom_only">Custom only</string>
    <string name="any">Any</string>
    <string name="contains">Contains</string>
    <string name="matches">Matches</string>
    <string name="apply_filters">Apply filters</string>
    <string name="search_something_first">Search something first!</string>
</resources>