<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_down"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort"/>

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:id="@+id/errorMessage"
            android:textColor="?attr/colorError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_something_first"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/sort_group"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:singleSelection="true"
            app:checkedButton="@id/sort_dex">

            <Button
                android:id="@+id/sort_dex"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_dex_order"/>

            <Button
                android:id="@+id/sort_total"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_stats_total"/>

            <Button
                android:id="@+id/sort_hp"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_hp"/>

            <Button
                android:id="@+id/sort_atk"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_attack"/>

            <Button
                android:id="@+id/sort_def"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_defense"/>

            <Button
                android:id="@+id/sort_spatk"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_spatk"/>

            <Button
                android:id="@+id/sort_spdef"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_spdef"/>

            <Button
                android:id="@+id/sort_speed"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_speed"/>


        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

</LinearLayout>