<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.MainActivity"
    style="@style/CoordinatorLayout">

    <com.google.android.material.appbar.AppBarLayout
        app:liftOnScroll="true"
        style="@style/AppBarLayout">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            app:menu="@menu/menu_main"
            app:title="@string/guesser"
            style="@style/MaterialToolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        style="@style/NestedScrollViewMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sprite"
                android:layout_marginBottom="16dp"
                style="@style/TextDataNormal" />

            <LinearLayout
                android:layout_marginTop="8dp"
                style="@style/TextLinearLayout">

                <TextView
                    android:text="@string/current_streak"
                    style="@style/TextDataNormal" />

                <TextView
                    android:id="@+id/text_streak"
                    style="@style/TextDataBold"
                    android:text="@string/_0" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="0dp"
                style="@style/TextLinearLayout">

                <TextView
                    android:text="@string/attempts_on_this_one"
                    style="@style/TextDataNormal" />

                <TextView
                    android:id="@+id/text_attempts"
                    style="@style/TextDataBold"
                    android:text="@string/_0" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_option_layout"
                style="@style/TextInputLayout"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/first_option"
                    android:hint="@string/head_pokemon"
                    style="@style/AutoCompleterTextView" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/second_option_layout"
                style="@style/TextInputLayout"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/second_option"
                    android:hint="@string/body_pokemon"
                    style="@style/AutoCompleterTextView" />

            </com.google.android.material.textfield.TextInputLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:useDefaultMargins="false"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="-8dp"
                android:layout_marginRight="-8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/surrender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_columnWeight="1"
                    android:text="@string/surrender"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_columnWeight="1"
                    android:text="@string/check"/>

            </GridLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/custom_sprites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_sprites_only"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>