<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/mainContainer"
            android:paddingHorizontal="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_option_layout"
                style="@style/TextInputLayout">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/first_option"
                    android:hint="@string/head_pokemon"
                    style="@style/AutoCompleterTextView" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/second_option_layout"
                android:enabled="false"
                style="@style/TextInputLayout"
                android:paddingTop="8dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/second_option"
                    android:hint="@string/body_pokemon"
                    style="@style/AutoCompleterTextView" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sprites_unstable"/>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/spritesGroup"
                style="@style/MaterialButtonToggleGroup"
                app:checkedButton="@id/toggle_any">

                <Button
                    style="@style/OutlinedButton"
                    android:id="@+id/toggle_any"
                    android:text="@string/any"/>

                <Button
                    style="@style/OutlinedButton"
                    android:id="@+id/toggle_custom"
                    android:text="@string/custom_only"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/types"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"/>

                <LinearLayout
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <ImageView
                        android:id="@+id/typesSelectAll"
                        android:src="@drawable/ic_deselect_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/typesGroup"
                style="@style/MaterialButtonToggleGroup"
                app:checkedButton="@id/toggle_contains">

                <Button
                    style="@style/OutlinedButton"
                    android:id="@+id/toggle_contains"
                    android:text="@string/contains"/>

                <Button
                    style="@style/OutlinedButton"
                    android:id="@+id/toggle_matches"
                    android:text="@string/matches"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.chip.ChipGroup
                android:layout_marginTop="4dp"
                android:id="@+id/typesChipGroup"
                style="@style/ChipGrup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stats"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"/>

            </LinearLayout>

            <GridLayout
                android:id="@+id/statsGridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:gravity="center_vertical">

            </GridLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/bottomContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/applyFilters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_filters"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>